fix: Исправить ошибку запроса статистики